--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ body {
     padding: 0;
 }
 
+.contact{
+    border-radius: 2em;
+    width: auto;
+    height: auto; 
+}
+
 @media only screen and (max-width: 450px) {
     /*.container {
                 display: inline;
@@ -763,7 +769,7 @@ body {
         background-color: #8ECAE6;
         box-shadow: 0 0 2em #219EBC;
         text-align: center;
-        width: 100%;
+       
         top: 100px;
         position: relative;
         margin-top: 30vh;
@@ -1878,7 +1884,7 @@ body {
         background-color: #8ECAE6;
         box-shadow: 0 0 2em #219EBC;
         text-align: center;
-        width: 100%;
+        
         top: 100px;
         position: relative;
         margin-top: 30vh;
@@ -2909,7 +2915,7 @@ body {
         background-color: #8ECAE6;
         box-shadow: 0 0 2em #219EBC;
         text-align: center;
-        width: 100%;
+        
         top: 100px;
         position: relative;
         margin-top: 40vh;
